[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/projectile_spell_behaviour.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 14.3902

[node name="Spell" type="Node"]

[node name="spell_body" type="Area2D" parent="."]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="spell_body"]
position = Vector2( -0.298317, -2.08825 )
shape = SubResource( 1 )

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Visuals"]
region_rect = Rect2( 66, 33.5481, 27, 28.4519 )

[node name="particle_remove_timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="spell_remove_timer" type="Timer" parent="."]
one_shot = true
[connection signal="area_entered" from="spell_body" to="spell_body" method="_on_spell_body_area_entered"]
[connection signal="body_entered" from="spell_body" to="spell_body" method="_on_Area2D_body_entered"]
